--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "react-toastify": "^11.0.2",
+    "slick-carousel": "^1.8.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
